# fugazi-core-ethonline2024

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  run_tasks.sh
contracts/: FugaziBalanceFacet.sol  FugaziCore.sol  FugaziOrderFacet.sol  FugaziPoolActionFacet.sol  FugaziPoolRegistryFacet.sol  FugaziStorageLayout.sol  FugaziViewerFacet.sol
contracts/misc/: Counter.sol
contracts/tokens/: FHERC20.sol  FakeEUR.sol  FakeFGZ.sol  FakeUSD.sol  TokenDistributor.sol
deploy/: deploy_Counter.ts  deploy_Fugazi.ts  deploy_Tokens.ts
deployments/localfhenix/: Counter.json
deployments/testnet/: FakeEUR.json  FakeFGZ.json  FakeUSD.json  FugaziBalanceFacet.json  FugaziCore.json  FugaziOrderFacet.json  FugaziPoolActionFacet.json  FugaziPoolRegistryFacet.json  FugaziViewerFacet.json  TokenDistributor.json
protocol_order_claimer/: check_and_claim.py  check_and_claim_my_order.py  protocol_order_claimer.ipynb
screenshots/: run_tasks_result.txt
tasks/: FugaziAddFacets.ts  FugaziAddLiquidity.ts  FugaziCreatePool.ts  FugaziDeposit.ts  FugaziGetPoolInfo.ts  FugaziRemoveLiquidity.ts  FugaziSwap.ts  FugaziWithdraw.ts  claimFromDistributor.ts  depositToDistributor.ts  index.ts
types/: hardhat.d.ts  index.ts
types/contracts/: FugaziBalanceFacet.ts  FugaziCore.ts  FugaziOrderFacet.ts  FugaziPoolActionFacet.ts  FugaziPoolRegistryFacet.ts  FugaziStorageLayout.ts  FugaziViewerFacet.ts  index.ts
types/contracts/FugaziOrderFacet.sol/: FugaziOrderFacet.ts  FugaziPoolActionFacet.ts  index.ts
types/contracts/tokens/: index.ts
(+19 files in other folders)
